# data-platform

clickhouse/: .env.example  docker-compose.yml
clickhouse/clickhouse-client/: .gitignore  Cargo.toml  Dockerfile
clickhouse/clickhouse-client/src/: main.rs
debezium/: .env.example  cdc-postgres-sources.json  docker-compose.yml
finnhub-connector/: Cargo.toml  Dockerfile  docker-compose.yml
finnhub-connector/src/: main.rs
kafka/: Dockerfile  docker-compose.yml
kafka-connect/: Dockerfile  connect-distributed.properties  docker-compose.yml
minio/: .gitignore  Dockerfile  docker-compose.yml
postgres-trx/: .env  Dockerfile  docker-compose.yml
postgres-trx/docker-entrypoint-initdb.d/: init-permissions.sh
prefect/: Dockerfile  docker-compose.yml  postgres.Dockerfile
sheet-connector/: .env  .gitignore  Cargo.toml  Dockerfile  deploy.Dockerfile  deploy.py  docker-compose.yml
sheet-connector/src/: main.rs
spark/: .env.example  .gitignore  Dockerfile  docker-compose.yml
spark-job/: .gitignore  Dockerfile  docker-compose.yml
spark-job/scripts/: kafka-connector.py
starrocks/: Dockerfile  docker-compose.yml  setup_db.py
