[package]
name = "finnhub-connector"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["debug", "derive", "string"] }
dotenv = "0.15.0"
futures-util = "0.3.31"
rdkafka = "0.37.0"
reqwest = "0.12.9"
reqwest-websocket = { version = "0.4.4", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.42.0", features = ["full"] }
