[package]
name = "sheet-connector"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
csv = "1.3.1"
dotenv = "0.15.0"
gcp_auth = "0.12.3"
reqwest = "0.12.12"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.136"
sqlx = { version = "0.8.3", features = ["chrono", "derive", "postgres", "runtime-tokio"] }
tokio = { version = "1.43.0", features = ["full"] }
